<resources>
    <string name="app_name">Ҳатлов Андижон</string>
    <string name="login">Логин</string>
    <string name="parol">Парол</string>
    <string name="enter">Кириш</string>
    <string name="main_page">Уй</string>
    <string name="problem_page">Муаммо қўшиш</string>
    <string name="chart">Кўрсатгичлар</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Излаш. . .</string>
    <string name="problems">Муаммолар</string>
    <string name="birik">Бириктирилган Маҳалла</string>
    <string name="desc">Андижон вилойтаи,  Андижон тумани Найман қишлоғи Қўқонлик маҳалласи</string>
    <string name="name">Самандар Асийдинов</string>
    <string name="completed">Тугатилди</string>
    <string name="test_mi">Ичимлик суви танқислиги ошиб кетган</string>
    <string name="streen_name">Кўча номи</string>
    <string name="home_address">Хонадон манзили</string>
    <string name="home_boss">Хонадон бошлиғи: </string>
    <string name="hint_name">Исм</string>
    <string name="hint_last_name">Фамиля</string>
    <string name="age">Йош</string>
    <string name="gender">Жинси</string>
    <string name="number">Телефон рақам</string>
    <string name="interview_del">Хонадон вакили билан суҳбат ўтказилган</string>
    <string name="cont">Давом этиш</string>
    <string name="problemContent">Муаммо мазмуни</string>
    <string name="save">Сақлаш</string>
    <string name="pdesc">Изоҳ</string>
    <string name="upload_image">Расм жойлаш</string>
    <string name="permission_req">Рухсат талаб қилинади</string>
    <string name="per_desc">Расмни танлаш учун рухсат керак. Сиз уни илова созламаларида беришингиз мумкин</string>
    <string name="open_set">Созламаларни очиш</string>
    <string name="many">Кўпи билан 4 та расм танланг!</string>
    <string name="less">Камида 1 та расм танланг!</string>
    <string name="all_images">Барча расмлар</string>
    <string name="image_pick">Расм танлаш</string>
    <string name="age_n">20</string>
    <string name="male">Еркак</string>
    <string name="tash">Маъсул ташкилот</string>
    <string name="and">Andijon suv ta\'miot tashkiloti</string>
    <string name="from_date">Санадан</string>
    <string name="to_date">Санагача</string>
    <string name="type">Тури</string>
    <string name="filter">Филтерлаш</string>
    <string name="process">Жараёнда</string>
    <string name="search_f">Излаш</string>
    <string name="date_enter">Санани танланг</string>
    <string name="cancel">Бекор қилиш</string>
    <string name="ok">Ок</string>
    <string name="set">Танлаш</string>
    <string name="success">Муваффақиятли</string>
    <string name="error_message">Логин ёки парол хато! </string>
    <string name="hello">Салом, </string>
    <string name="no_internet">Интенет алоқасини текширинг!</string>
    <string name="uploaded">Юборилди</string>
    <string name="enter_correct_data">Маълумотларни тўғри киритинг!</string>
    <string name="female">Аёл</string>
    <string name="refresh">Қайта кўриш</string>
    <string name="internet_no">Интернет мавжуд эмас!</string>
    <string name="error_occ">Хатолик юз берди</string>
    <string name="enter_query">Сўров киритинг!</string>
    <string name="viewing">Ko\'rib chiqilmoqda</string>
    <string name="update_appeal">Янгилаш</string>
    <string name="updated">Янгиланди</string>
    <string name="delete_image">Расмни ўчириш</string>
    <string name="delete_image_content">Расмни ўчиришни истайсизми?</string>
    <string name="deleted">Ўчирилди</string>
    <string name="update_downloaded">Янгиланиш ўрнатилди</string>
    <string name="install">Ўрнатиш</string>
</resources>