<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bottom.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="1"
                android:paddingStart="@dimen/_4sdp"
                app:navigationIcon="@drawable/arrow_back"
                app:subtitleTextAppearance="@style/SubTextStyle"
                app:titleMarginStart="@dimen/_20sdp"
                app:titleTextAppearance="@style/TextStyle" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/clickable_linear"
                android:layout_marginEnd="12dp"
                android:src="@drawable/baseline_edit_24"/>

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_14sdp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_20sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/home_boss"
                            android:textSize="@dimen/_9sdp" />

                        <TextView
                            android:id="@+id/tvFullName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/age"
                            android:textSize="@dimen/_9sdp" />

                        <TextView
                            android:id="@+id/tvAge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_semibold"
                            android:text="@string/gender"
                            android:textSize="@dimen/_9sdp" />

                        <TextView
                            android:id="@+id/tvGen"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    app:cardBackgroundColor="#ae501e"
                    app:cardCornerRadius="@dimen/_12sdp"
                    app:strokeColor="@android:color/transparent"
                    app:strokeWidth="0dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/_15sdp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/cardTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/poppins_semibold"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12sdp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/tvBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:backgroundTint="@color/green"
                            android:clickable="false"
                            android:focusable="false"
                            android:fontFamily="@font/poppins_semibold"
                            android:textAllCaps="false"
                            android:textSize="@dimen/_7sdp"
                            app:cornerRadius="@dimen/_4sdp" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:id="@+id/tvDeadLine"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_9sdp"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ProgressBar
                    android:id="@+id/pr"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:indeterminateTint="@color/blue"
                    android:layout_gravity="center"/>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_marginTop="@dimen/_30sdp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearNumber"
                    android:layout_width="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_height="wrap_content"
                    android:background="@drawable/clickable_linear">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_35sdp"
                        android:background="@drawable/linear_light"
                        android:gravity="center"
                        android:padding="@dimen/_4sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_15sdp"
                            android:layout_height="@dimen/_15sdp"
                            android:src="@drawable/union" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_8sdp"
                            android:ellipsize="end"
                            android:fontFamily="@font/poppins_semibold"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_light"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_10sdp"
                    android:paddingHorizontal="@dimen/_4sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:src="@drawable/orange_loc" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvLoc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>